# 100-Days-n-Forest

./: .gitignore  README.md  app.css  capacitor.config.json  game.js  index.html  launch.cjs  main.js  package-lock.json  package.json  start.bat  start.sh  style.css  vite.config.mjs
.github/workflows/: build.yml  pages.yml
src/: game3d.js  net.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web-2d/: index.html
