[package]
name = "yuzgunormanda"
version = "1.0.0"
description = "100 Gün Ormanda — Amazon survival horror"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
